// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should add a new todo 1`] = `
<TodoList>
  <div>
    <input
      className="new-todo-input"
      onKeyDown={[Function]}
      type="text"
    />
    <ul
      className="todos"
    />
  </div>
</TodoList>
`;

exports[`should add a new todo 2`] = `
<TodoList>
  <div>
    <input
      className="new-todo-input"
      onKeyDown={[Function]}
      type="text"
    />
    <ul
      className="todos"
    />
  </div>
</TodoList>
`;

exports[`should display todos passed to it 1`] = `
<TodoList
  todos={
    Array [
      Object {
        "done": false,
        "title": "zagzag",
      },
    ]
  }
>
  <div>
    <input
      className="new-todo-input"
      onKeyDown={[Function]}
      type="text"
    />
    <ul
      className="todos"
    >
      <li
        className="todo"
        key="0"
      >
        zagzag
        <button
          className="remove"
          onClick={[Function]}
        >
          x
        </button>
        <button
          className="toggle"
          onClick={[Function]}
        >
          done
        </button>
      </li>
    </ul>
  </div>
</TodoList>
`;

exports[`should remove a todo 1`] = `
<TodoList
  todos={
    Array [
      Object {
        "done": false,
        "title": "zagzag",
      },
      Object {
        "done": false,
        "title": "gaga",
      },
    ]
  }
>
  <div>
    <input
      className="new-todo-input"
      onKeyDown={[Function]}
      type="text"
    />
    <ul
      className="todos"
    >
      <li
        className="todo"
        key="0"
      >
        zagzag
        <button
          className="remove"
          onClick={[Function]}
        >
          x
        </button>
        <button
          className="toggle"
          onClick={[Function]}
        >
          done
        </button>
      </li>
      <li
        className="todo"
        key="1"
      >
        gaga
        <button
          className="remove"
          onClick={[Function]}
        >
          x
        </button>
        <button
          className="toggle"
          onClick={[Function]}
        >
          done
        </button>
      </li>
    </ul>
  </div>
</TodoList>
`;

exports[`should remove a todo 2`] = `
<TodoList
  todos={
    Array [
      Object {
        "done": false,
        "title": "zagzag",
      },
      Object {
        "done": false,
        "title": "gaga",
      },
    ]
  }
>
  <div>
    <input
      className="new-todo-input"
      onKeyDown={[Function]}
      type="text"
    />
    <ul
      className="todos"
    >
      <li
        className="todo"
        key="0"
      >
        gaga
        <button
          className="remove"
          onClick={[Function]}
        >
          x
        </button>
        <button
          className="toggle"
          onClick={[Function]}
        >
          done
        </button>
      </li>
    </ul>
  </div>
</TodoList>
`;

exports[`should render todo list 1`] = `
<div>
  <input
    className="new-todo-input"
    onKeyDown={[Function]}
    type="text"
  />
  <ul
    className="todos"
  />
</div>
`;

exports[`should toggle a todo 1`] = `
<TodoList
  todos={
    Array [
      Object {
        "done": false,
        "title": "zagzag",
      },
      Object {
        "done": false,
        "title": "gaga",
      },
    ]
  }
>
  <div>
    <input
      className="new-todo-input"
      onKeyDown={[Function]}
      type="text"
    />
    <ul
      className="todos"
    >
      <li
        className="todo"
        key="0"
      >
        zagzag
        <button
          className="remove"
          onClick={[Function]}
        >
          x
        </button>
        <button
          className="toggle"
          onClick={[Function]}
        >
          done
        </button>
      </li>
      <li
        className="todo"
        key="1"
      >
        gaga
        <button
          className="remove"
          onClick={[Function]}
        >
          x
        </button>
        <button
          className="toggle"
          onClick={[Function]}
        >
          done
        </button>
      </li>
    </ul>
  </div>
</TodoList>
`;

exports[`should toggle a todo 2`] = `
<TodoList
  todos={
    Array [
      Object {
        "done": false,
        "title": "zagzag",
      },
      Object {
        "done": false,
        "title": "gaga",
      },
    ]
  }
>
  <div>
    <input
      className="new-todo-input"
      onKeyDown={[Function]}
      type="text"
    />
    <ul
      className="todos"
    >
      <li
        className="todo"
        key="0"
      >
        zagzag
        <button
          className="remove"
          onClick={[Function]}
        >
          x
        </button>
        <button
          className="toggle"
          onClick={[Function]}
        >
          done
        </button>
      </li>
      <li
        className="todo"
        key="1"
      >
        gaga
        <button
          className="remove"
          onClick={[Function]}
        >
          x
        </button>
        <button
          className="toggle"
          onClick={[Function]}
        >
          done
        </button>
      </li>
    </ul>
  </div>
</TodoList>
`;
